# tensor4all-hdf5-ffi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-05-hdf5-1.10.5-support-plan.md  2026-02-05-hdf5-1.12-minimum-version.md  2026-02-05-julia-python-interop-tests.md  2026-02-05-runtime-loading-implementation.md
hdf5/: Cargo.toml  build.rs
hdf5-types/: Cargo.toml  build.rs
hdf5-types/src/: h5type.rs  lib.rs
hdf5/examples/: check_file_create.rs  interop_test.rs
hdf5/src/: error.rs  globals.rs  handle.rs  lib.rs  sync.rs  util.rs
hdf5/src/hl/: attribute.rs  chunks.rs  container.rs  dataset.rs  dataspace.rs  datatype.rs  extents.rs  file.rs  filters.rs  group.rs  location.rs  object.rs  plist.rs  references.rs  selection.rs
hdf5/src/hl/filters/: blosc.rs  lzf.rs  zfp.rs
hdf5/src/hl/plist/: common.rs  dataset_access.rs  dataset_create.rs  file_access.rs  file_create.rs  link_create.rs  object_copy.rs
hdf5/src/hl/references/: legacy.rs  standard.rs
hdf5/src/sys/: mod.rs  runtime.rs
hdf5/tests/: test_dataset.rs  test_datatypes.rs  test_object_references.rs  test_plist.rs  tests.rs
hdf5/tests/common/: gen.rs  util.rs
scripts/: test_hdf5_versions.sh
tests/julia/: test_interop.jl
tests/python/: test_interop.py
