[workspace]
resolver = "2"
members = ["hdf5", "hdf5-types"]
default-members = ["hdf5", "hdf5-types"]

[workspace.package]
rust-version = "1.80.0"
authors = [
    "Ivan Smirnov <aldanor@users.noreply.github.com>",
    "Magnus Ulimoen <mulimoen@users.noreply.github.com>",
]
keywords = ["hdf5"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shinaoka/tensor4all-hdf5-ffi"
homepage = "https://github.com/shinaoka/tensor4all-hdf5-ffi"
edition = "2021"

[workspace.dependencies]
# external
cfg-if = "1.0"
half = { version = "2.2", default-features = false }
libc = "0.2"
libloading = "0.8"
num-complex = { version = "0.4", default-features = false }

# internal
hdf5 = { path = "hdf5" }
hdf5-types = { path = "hdf5-types" }

# Use hdf5-metno-sys from crates.io
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11" }

[profile.dev]
# Fast compile, reasonable runtime
opt-level = 0          # no optimizations = much faster compilation
debug = 1              # keep minimal debug info (0 is smaller, 1 is a nice compromise)
incremental = true     # reuse previous compilation work
codegen-units = 16     # more parallel codegen units = faster compiles
lto = "off"            # no link-time optimization
panic = "unwind"       # default, keeps backtraces usable
overflow-checks = true # keep checks for safety in dev

[profile.test]
# Inherit dev as a baseline, then tweak for tests
inherits = "dev"
opt-level = 0          # keep tests compiling fast
debug = 1              # enough info for backtraces
overflow-checks = true
