[package]
name = "tensor4all-hdf5-types"
description = "Native Rust equivalents of HDF5 types - fork for tensor4all"
readme = "README.md"
build = "build.rs"
links = "hdf5_types"
categories = ["encoding"]
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
h5-alloc = []
complex = ["dep:num-complex"]
f16 = ["dep:half"]

[dependencies]
ascii = "1.1"
cfg-if = { workspace = true }
libc = { workspace = true }
num-complex = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
unindent = "0.2"

[package.metadata.docs.rs]
features = ["f16", "complex"]
