[package]
name = "hdf5"
readme = "../README.md"
description = "Thread-safe Rust bindings for the HDF5 library - fork for tensor4all"
build = "build.rs"
categories = ["science", "filesystem"]
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = []
# Enable complex number type support.
complex = ["hdf5-types/complex"]
# Enable float16 type support.
f16 = ["hdf5-types/f16"]
# Runtime library loading via dlopen (for Julia/Python bindings)
runtime-loading = ["dep:libloading"]

# The features with version numbers such as 1.10.3, 1.12.0 are metafeatures
# and is only available when the HDF5 library is at least this version.
# Features have_direct and have_parallel are also metafeatures and dependent
# on the HDF5 library which is linked against.

[dependencies]
# external
bitflags = "2.4"
cfg-if = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true, optional = true }
ndarray = ">=0.15, <=0.17"
parking_lot = "0.12"
paste = "1.0"
# internal
hdf5-sys = { workspace = true }
hdf5-types = { workspace = true }

[dev-dependencies]
half = { workspace = true }
num-complex = { workspace = true }
parking_lot = "0.12.3"
paste = "1.0"
pretty_assertions = "1.4"
rand = { version = "0.9", features = ["small_rng"] }
regex = "1.10"
scopeguard = "1.2"
tempfile = "3.9"

[package.metadata.docs.rs]
features = ["f16", "complex"]

[lints.rust]
# Allow cfg checks for features that were removed but still have dead code paths
# These features (mpio, blosc, lzf, zfp) are disabled and their code is gated
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("mpio", "have-parallel", "blosc", "blosc-lz4", "blosc-snappy", "blosc-zlib", "blosc-zstd", "blosc-all", "lzf", "zfp"))'
] }
