[package]
name = "tensor4all-hdf5-ffi"
readme = "../README.md"
description = "Thread-safe Rust bindings for the HDF5 library - fork for tensor4all"
build = "build.rs"
categories = ["science", "filesystem"]
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = []
# Enable complex number type support.
complex = ["hdf5-types/complex"]
# Enable float16 type support.
f16 = ["hdf5-types/f16"]

# Note: This crate uses runtime library loading (dlopen) only.
# For link mode, use the upstream hdf5-metno crate directly.

[dependencies]
# external
bitflags = "2.4"
cfg-if = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
ndarray = ">=0.15, <=0.17"
parking_lot = "0.12"
paste = "1.0"
# internal
hdf5-types = { workspace = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
half = { workspace = true }
num-complex = { workspace = true }
parking_lot = "0.12.3"
paste = "1.0"
pretty_assertions = "1.4"
rand = { version = "0.9", features = ["small_rng"] }
regex = "1.10"
scopeguard = "1.2"
tempfile = "3.9"

[package.metadata.docs.rs]
features = ["f16", "complex"]

[lints.rust]
# Allow cfg checks for features that were removed but still have dead code paths
# The "link" feature is removed (runtime-loading only); version features are from upstream
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("mpio", "have-parallel", "blosc", "blosc-lz4", "blosc-snappy", "blosc-zlib", "blosc-zstd", "blosc-all", "lzf", "zfp"))',
    'cfg(feature, values("link", "runtime-loading"))',
    'cfg(feature, values("1.8.5", "1.8.6", "1.8.7", "1.8.8", "1.8.9", "1.8.10", "1.8.11", "1.8.12", "1.8.13", "1.8.14", "1.8.15", "1.8.16", "1.8.17", "1.8.18", "1.8.19", "1.8.20", "1.8.21"))',
    'cfg(feature, values("1.10.0", "1.10.1", "1.10.2", "1.10.3", "1.10.4", "1.10.5", "1.10.6", "1.10.7", "1.10.8"))',
    'cfg(feature, values("1.12.0", "1.12.1", "1.12.2"))',
    'cfg(feature, values("1.14.0", "1.14.1", "1.14.2", "1.14.3", "1.14.4", "1.14.5", "1.14.6"))'
] }
